# remix

./: .gitignore  ABOUT.txt  Cargo.toml  LICENSING_SUMMARY.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  VOICEOVER_TESTING_GUIDE.md  build-macos-app.sh  release.sh  remix.sh
.github/workflows/: build-dmg.yml
macos-app/PCAMixer/: Package.swift
macos-app/PCAMixer/Sources/: AudioEngine.swift  ContentView.swift  PCAMixerApp.swift  music_tool.h
macos-app/Remix/: Package.swift  module.modulemap
macos-app/Remix/Sources/: AudioEngine.swift  ContentView.swift  LicensesView.swift  LoudnessAnalyzer.swift  MixerPresetStore.swift  PreferencesView.swift  RemixApp.swift  music_tool.h  remix.h
models/: convert_demucs.py
scripts/: bundle_python.sh  demucs_separate.py  download_models.py  generate_app_icon.py
src/: demucs.rs  ffi.rs  lib.rs  main.rs
static/: index.html
