[package]
name = "remix"
version = "0.1.0"
edition = "2021"
description = "Audio stem separation tool"

[lib]
name = "remix"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
hound = "3.5"              # WAV file I/O
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm"] }  # Audio decoding
anyhow = "1.0"             # Error handling
libc = "0.2"               # C FFI types

# For binaries
image = "0.25"             # PNG generation for icon generator

[[bin]]
name = "generate_icon"
path = "src/bin/generate_icon.rs"
